@@ -2,22 +2,25 @@ package com.cravelog.config;
 
 import com.cravelog.security.CustomOAuth2UserService;
 import com.cravelog.security.JwtAuthenticationFilter;
-import com.cravelog.security.OAuth2AuthenticationSuccessHandler;
 import com.cravelog.security.OAuth2AuthenticationFailureHandler;
+import com.cravelog.security.OAuth2AuthenticationSuccessHandler;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder; // ⭐️ 추가
-import org.springframework.security.crypto.password.PasswordEncoder; // ⭐️ 추가
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+
+// ⭐️ 누락되었던 CORS 관련 import 문들
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -28,65 +31,51 @@ public class SecurityConfig {
     private final OAuth2AuthenticationSuccessHandler oAuth2AuthenticationSuccessHandler;
     private final OAuth2AuthenticationFailureHandler oAuth2AuthenticationFailureHandler;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    // ⭐️ 비밀번호 암호화 인코더 빈 등록
+
+    // ⭐️ 비밀번호 암호화 인코더 빈 등록 (이메일 회원가입용)
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-    // application.yml에서 프론트엔드 주소(Vercel)를 가져옵니다.
-    @Value("${app.auth.allowed-origins}")
-    private String allowedOrigins;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> {})
-                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable()) // REST API이므로 CSRF 비활성화
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
                 // 접근 권한 설정
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/v1/auth/**").permitAll() // ⭐️ 회원가입, 이메일 로그인 API 허용
-                        .requestMatchers("/api/v1/users/**").permitAll()
-                        .requestMatchers("/api/v1/me/**").authenticated()
+                        .requestMatchers("/api/v1/auth/**").permitAll() // ⭐️ 이메일 회원가입/로그인 API 누구나 접근 허용
+                        .requestMatchers("/api/v1/users/**").permitAll() // 퍼블릭 프로필 검색 및 조회 허용
+                        .requestMatchers("/api/v1/me/**").authenticated() // 내 정보 관리는 로그인 필요
                         .anyRequest().permitAll()
                 )
 
-                // OAuth2 로그인 설정
+                // OAuth2 (카카오) 로그인 설정
                 .oauth2Login(oauth2 -> oauth2
                         .userInfoEndpoint(userInfo -> userInfo
-                                .userService(customOAuth2UserService) // 카카오 데이터 처리
+                                .userService(customOAuth2UserService)
                         )
-                        .successHandler(oAuth2AuthenticationSuccessHandler) // 성공 시 JWT 발급
-                        .failureHandler(oAuth2AuthenticationFailureHandler) // ⭐️ 실패 시 404 방지 및 에러 전달
+                        .successHandler(oAuth2AuthenticationSuccessHandler)
+                        .failureHandler(oAuth2AuthenticationFailureHandler)
                 )
 
-
-                // 에러 핸들링 (401 에러 반환)
-                .exceptionHandling(ex -> ex
-                        .authenticationEntryPoint((request, response, authException) -> {
-                            response.sendError(jakarta.servlet.http.HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized");
-                        })
-                );
-
-        // 매 요청마다 JWT 토큰을 검사하는 필터를 제일 앞에 추가
-        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                // JWT 필터 등록
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // ⭐️ Vercel 프론트엔드의 접근을 허락해주는 CORS 설정 Bean
+    // ⭐️ CORS 설정 빈 (에러가 났던 부분)
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // Vercel 도메인 허용
-        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
-        // GET, POST, PUT, DELETE 등 모든 메서드 허용
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        // 모든 헤더 허용
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        // 인증 정보(토큰 등) 포함 허용
+        // 허용할 프론트엔드 도메인들
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173", "https://cravelog.vercel.app"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
